Optimized code and now everything works